# algds2024

lab2/: CMakeLists.txt  README.md
lab2/src/: lab2_treaps.c  lab_2_treaps.h  treaps_test.cpp
